# thorvg.pixel-inspector

./: .gitignore  CODEOWNERS  LICENSE  README.md  build_and_run.sh  install_thorvg.sh  meson.build  update_and_evaluate.sh  update_and_run.sh
res/pending/: 4315-crash-issue.json
src/: common.h  engine.cpp  engine.h  evaluator.cpp  evaluator.h  main.cpp  meson.build  runner.cpp  runner.h
src/common/: common.h  meson.build
src/draw_test/: accessor.cpp  blending.cpp  bounding_box.cpp  clipping.cpp  data_load.cpp  drawTest.cpp  drawTest.h  duplicate.cpp  effectDropShadow.cpp  fillRule.cpp  fillSpread.cpp  gradient.cpp  gradientMasking.cpp  gradientStroke.cpp  gradientTransform.cpp  issue.cpp  masking.cpp  maskingMethods.cpp  meson.build  opacity.cpp  path.cpp  pictureSvg.cpp  scene.cpp  sceneBlending.cpp  sceneEffects.cpp  shapes.cpp  stroke.cpp  strokeMiterlimit.cpp  stroke_line.cpp  textLayout.cpp  textLineWrap.cpp  text_effects.cpp  text_otf.cpp  text_ttf.cpp  transform.cpp  trimPath.cpp  v0_issues.cpp  v1_issues.cpp  viewport.cpp
src/engine/: engine.cpp  meson.build
src/evaluator/: evaluationQueue.cpp  evaluationQueue.h  evaluator.cpp  evaluator.h  flipEvaluator.cpp  flipEvaluator.h  meson.build  pixelEvaluator.cpp  pixelEvaluator.h
src/saver/: htmlSaver.cpp  htmlSaver.h  jsonSaver.cpp  jsonSaver.h  mdSaver.cpp  mdSaver.h  meson.build  pngSaver.cpp  pngSaver.h
