source_file = [
   'drawTest.h',
   'drawTest.cpp',
   'accessor.cpp',
   'blending.cpp',
   'bounding_box.cpp',
   'clipping.cpp',
   'data_load.cpp',
   'duplicate.cpp',
   'effect_drop_shadow.cpp',
   'fillRule.cpp',
   'fillSpread.cpp',
   'gradient.cpp',
   'gradientStroke.cpp',
   'gradient_masking.cpp',
   'gradient_transform.cpp',
   'issue.cpp',
   'masking.cpp',
   'masking_methods.cpp',
   'opacity.cpp',
   'path.cpp',
   'pictureSvg.cpp',
   'scene.cpp',
   'scene_blending.cpp',
   'scene_effects.cpp',
   'shapes.cpp',
   'stroke.cpp',
   'stroke_line.cpp',
   'stroke_miterlimit.cpp',
   'textLayout.cpp',
   'text_effects.cpp',
   'text_line_wrap.cpp',
   'text_otf.cpp',
   'text_ttf.cpp',
   'transform.cpp',
   'trimPath.cpp',
   'viewport.cpp',
]

draw_test_dep = declare_dependency(
    include_directories : include_directories('.'),
    dependencies : [thorvg_dep, common_dep],
    sources : source_file)
