source_file = [
   'drawTest.h',
   'drawTest.cpp',
   'accessor.cpp',
   'blending.cpp',
   'boundingBox.cpp',
   'clipping.cpp',
   'dataLoad.cpp',
   'duplicate.cpp',
   'effectDropShadow.cpp',
   'fillRule.cpp',
   'fillSpread.cpp',
   'gradient.cpp',
   'gradientStroke.cpp',
   'gradientMasking.cpp',
   'gradientTransform.cpp',
   'issue.cpp',
   'masking.cpp',
   'maskingMethods.cpp',
   'opacity.cpp',
   'path.cpp',
   'pictureSvg.cpp',
   'scene.cpp',
   'sceneBlending.cpp',
   'sceneEffects.cpp',
   'shapes.cpp',
   'stroke.cpp',
   'strokeLine.cpp',
   'strokeMiterlimit.cpp',
   'textLayout.cpp',
   'textEffects.cpp',
   'textLineWrap.cpp',
   'textOtf.cpp',
   'textTtf.cpp',
   'transform.cpp',
   'trimPath.cpp',
   'viewport.cpp',
]

draw_test_dep = declare_dependency(
    include_directories : [include_directories('.')],
    dependencies : [thorvg_dep],
    sources : source_file)
